configurations/chores-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: chores-app
spec:
  selector:
    app: chores-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chores-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chores-app
  template:
    metadata:
      labels:
        app: chores-app
    spec:
      containers:
      - name: chores-app
        image: jaanuk/home-chores:latest
        ports:
          - containerPort: 5000
      imagePullSecrets:
        - name: dockerhub-credentials
